New driver for Cloud Hypervisor

--- a/configure.ac
+++ b/configure.ac
@@ -466,6 +466,7 @@ LIBVIRT_DRIVER_ARG_REMOTE
 LIBVIRT_DRIVER_ARG_LIBVIRTD
 LIBVIRT_DRIVER_ARG_NETWORK
 LIBVIRT_DRIVER_ARG_INTERFACE
+LIBVIRT_DRIVER_ARG_CH
 
 LIBVIRT_DRIVER_CHECK_QEMU
 LIBVIRT_DRIVER_CHECK_OPENVZ
@@ -482,6 +483,7 @@ LIBVIRT_DRIVER_CHECK_REMOTE
 LIBVIRT_DRIVER_CHECK_LIBVIRTD
 LIBVIRT_DRIVER_CHECK_NETWORK
 LIBVIRT_DRIVER_CHECK_INTERFACE
+LIBVIRT_DRIVER_CHECK_CH
 
 
 dnl
@@ -955,6 +957,7 @@ LIBVIRT_DRIVER_RESULT_REMOTE
 LIBVIRT_DRIVER_RESULT_NETWORK
 LIBVIRT_DRIVER_RESULT_LIBVIRTD
 LIBVIRT_DRIVER_RESULT_INTERFACE
+LIBVIRT_DRIVER_RESULT_CH
 AC_MSG_NOTICE([])
 AC_MSG_NOTICE([Storage Drivers])
 AC_MSG_NOTICE([])
