--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -114,6 +114,7 @@ include hyperv/Makefile.inc.am
 include vmx/Makefile.inc.am
 include vmware/Makefile.inc.am
 include vbox/Makefile.inc.am
+include ch/Makefile.inc.am
 include openvz/Makefile.inc.am
 include qemu/Makefile.inc.am
 include bhyve/Makefile.inc.am
